Bug 152014 - Wrong result with match function when multiple spreadsheets are opened
Summary: Wrong result with match function when multiple spreadsheets are opened
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.3.6.2 release
Hardware: All All
: high major
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:7.5.0 target:7.4.4 target:7.4.3
Keywords:
Depends on:
Blocks: Calc-Function
  Show dependency treegraph
 
Reported: 2022-11-12 09:52 UTC by yuri.musashi.miwa.tamura
Modified: 2022-11-22 15:50 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description yuri.musashi.miwa.tamura 2022-11-12 09:52:21 UTC
Description:
Wrong result with match function when multiple spreadsheets are opened

Steps to Reproduce:
1. New spreadsheet
2. Type =MATCH(1,A2,0) in Sheet1.A1
3. Type 1 in Sheet1.A2
4. Create another spreadsheet (Ctrl+N)
5. Type =MATCH(1,A2,0) in Sheet1.A1

Actual Results:
Sheet1.A1=1 in both spreadsheets

Expected Results:
Sheet1.A1=#N/A in the 2nd spreadsheet


Reproducible: Always


User Profile Reset: Yes

Additional Info:
This bug happens also in 7.3.7 and 7.4.2

Version: 7.2.7.2 (x64) / LibreOffice Community
Build ID: 8d71d29d553c0f7dcbfa38fbfda25ee34cce99a2
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: threaded

Version: 7.3.7.2 (x64) / LibreOffice Community
Build ID: e114eadc50a9ff8d8c8a0567d6da8f454beeb84f
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: threaded

Version: 7.4.2.3 (x64) / LibreOffice Community
Build ID: 382eef1f22670f7f4118c8c2dd222ec7ad009daf
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: threaded
Comment 1 m_a_riosv 2022-11-12 12:39:16 UTC
Reproducible, but a Menu/Data/Calculate/Recalculate hard [Ctrl+Shift+F9] solves de issue, because Autocalculate [F9] it is not enought.

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3c0be5564afe1b9cc843a49aba88b72af74c43ab
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded
Comment 2 stragu 2022-11-12 17:10:34 UTC
Also reproduced in:

Version: 6.3.6.2
Build ID: 2196df99b074d8a661f4036fca8fa0cbfa33a497
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3; 
Locale: en-AU (en_AU.UTF-8); UI-Language: en-US
Calc: threaded
Comment 3 Commit Notification 2022-11-12 21:39:56 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f86a0666ac337363b470c9c67fa0970a330b26a2

Resolves: tdf#152014 When reusing interpreter context slot clear lookup cache

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Eike Rathke (retired, only occasionally showing up) 2022-11-12 21:41:33 UTC
Pending review
https://gerrit.libreoffice.org/c/core/+/142630 for 7-4
https://gerrit.libreoffice.org/c/core/+/142631 for 7-4-3
Comment 5 Commit Notification 2022-11-13 17:34:55 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/f7f4b00185318c1f2949ca42316e1a92c57da23b

Resolves: tdf#152014 When reusing interpreter context slot clear lookup cache

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 stragu 2022-11-14 08:04:24 UTC
Verified as fixed in:

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6e66b5d75b4cda0314b64f4d12ef9e4350751470
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thank you for the quick fix, Eike! :)
Comment 7 Commit Notification 2022-11-15 10:11:25 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-7-4-3":

https://git.libreoffice.org/core/commit/6ace25e26e1ff3abbe10747630caf3b9f8d118f7

Resolves: tdf#152014 When reusing interpreter context slot clear lookup cache

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2022-11-22 15:50:13 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fc3993c6794e2749400755ecd032165a61d5d959

tdf#152014: sc_uicalc: Add unittest

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.